# routes/login.js
@@ -5,4 +5,6 @@ var router = express.Router();
 /* POST login. */
 router.post('/login', UsersController.login);
 
+router.post('/register', UsersController.register);
+
 module.exports = router;
